unpackaged/main/default/objects/litify__lp_Team__c/litify__lp_Team__c.object-meta.xml
<CustomObject>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>