unpackaged/main/default/objects/litify__lp_Team__c/fields/litify__lp_Active__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>