unpackaged/main/default/objects/litify__lp_Team__c/fields/litify__lp_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Auto_Number__c</fullName>
    <displayFormat>T-{0000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>