unpackaged/main/default/objects/litify__lp_Team__c/fields/litify__lp_Description__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>